--- a/assets/css/mainstyle.css
+++ b/assets/css/mainstyle.css
@@ -1,25 +1,52 @@
 
+body {
+    background: rgb(205, 205, 205);
+}
+a {
+    color: rgb(121, 230, 255);
+}
 .container {
     max-width: 100%;
     padding-left: 0px;
 }
 .nav-item {
     padding-left: 50px;
-    /* padding-top: 15px; */
 }
-a {
+.statement-banner {
+    font-size: 80px;
     color: rgb(121, 230, 255);
+    background: rgba(10, 10, 10, .4);
+    padding-top: 60px;
+    padding-bottom: 60px;
+    margin: 0px;
 }
+.caption {
+    position: absolute;
+    top: 25%;
+    text-align: center;
+    width: 98.6%;
+    color: whitesmoke;
+}
+
 #img-linkedin {
     height: 15px;
     padding: 0px;
 }
 #logo-text {
-    padding-left: 100px;
-    padding-top: 25px;
+    padding-left: 50px;
+    padding-top: 20px;
+    font-family: "Shree Devanagari 714", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: whitesmoke;
+    font-size: 35px;
+}
+#belief-caption {
+    font-family: "Shree Devanagari 714", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: rgb(121, 230, 255);
+    padding-top: 20px;
+    font-size: 18px;
 }
 #zac-logo {
-    height: 50px;
+    height: 35px;
 }
 #nav-email {
     font-size: 15px;
@@ -28,13 +55,14 @@ a {
     float: left;
 }
 #banner {
-    max-width: 100%;
+    width: 100%;
     position: relative;
     z-index: -1;
     margin-top: -100px;
 }
 #header {
     position: sticky;
+    z-index: 3;
     top: 0;
     margin: 0px;
     padding-left: 0px;
@@ -44,6 +72,31 @@ a {
     position: relative;
     background-image: linear-gradient(to top, rgba(255,0,0,0),black);
 }
-#img-container {
-    
+#content-wrapper {
+    background-image: url(/assets/images/couch-bg.jpg)
 }
+#about-logo {
+    position: sticky;
+    margin-top: 30px;
+    margin-left: 100px;
+}
+#about-paragraph {
+    position: sticky;
+    margin: 10px 100px 100px 100px;
+    text-align: justify;
+}
+
+
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+
+/* Small devices (tablets, 768px and up) */
+/* @media (min-width: @screen-sm-min) { 
+
+ } */
+
+/* Medium devices (desktops, 992px and up) */
+/* @media (min-width: @screen-md-min) { ... } */
+
+/* Large devices (large desktops, 1200px and up) */
+/* @media (min-width: @screen-lg-min) { ... } */
